# djanckets-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
djackets/: manage.py
djackets/djackets/: asgi.py  settings.py  wsgi.py
djackets/order/: admin.py
djackets/order/migrations/: 0001_initial.py
djackets/product/: models.py  serializers.py  views.py
djackets/product/migrations/: 0001_initial.py  0002_product.py
