[tool.poetry]
name = "djanckets-backend"
version = "0.1.0"
description = ""
authors = ["a.auchynnikau <a.auchynnikau@8allocate.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
django-rest-framework = "^0.1.0"
django-cors-headers = "^3.13.0"
djoser = "^2.1.0"
python-dotenv = "^0.21.0"
Pillow = "^9.2.0"
stripe = "^4.1.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
